Fixed mailgun sending bug, updated secrets example

--- a/secrets.py.example
+++ b/secrets.py.example
@@ -1,6 +1,6 @@
 api_key = "key-yourApiKeyHere"
-omega_email = "somebody@nyu.edu"
-sigma_email = "somebodyElse@nyu.edu"
+omega_email = "omega+chapteremailer@skullhouse.nyc"
+sigma_email = "sigma+chapteremailer@skullhouse.nyc"
 users = [
     "user@nyu.edu",
     "user@nyu.edu",
