Added debug mode

--- a/secrets.py.example
+++ b/secrets.py.example
@@ -1,6 +1,10 @@
 api_key = "key-yourApiKeyHere"
+
+is_debug_mode = True
+
 omega_email = "omega+chapteremailer@skullhouse.nyc"
 sigma_email = "sigma+chapteremailer@skullhouse.nyc"
+
 users = [
     "user@nyu.edu",
     "user@nyu.edu",
